fix stretched images

--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,7 @@ header {
   }
   nav {
     margin: auto;
+    font-size: 10px;
   }
 }
 
@@ -242,6 +243,7 @@ header {
 
 .project-img {
   max-width: 80%;
+  height: auto;
 }
 
 .project-title {
@@ -260,6 +262,9 @@ header {
 @media only screen and (max-width: 600px) {
   .project-item {
     flex-wrap: wrap;
+  }
+  .project-img {
+    align-self: center;
   }
 }
 
